kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: torinos-web
  namespace: torinos-web
  labels:
    name: torinos-web
    role: web
spec:
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      name: torinos-web
      labels:
        name: torinos-web
        role: web
    spec:
      containers:
        - image: torinosio/web:latest
          name: torinos-web
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: ping
              port: 8080
            timeoutSeconds: 100
            failureThreshold: 20
          ports:
            - containerPort: 8080
